gccida/g2/toe64
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/toe64/src/real.c:4194:20: error: use of undeclared identifier 'XFlittlenan'
for ( i = 0; ; i = XFlittlenan[v13] ) 
                   ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/toe64/src/obj/real.o] Error 1
